--- a/administrator/templates/atum/scss/blocks/_modals.scss
+++ b/administrator/templates/atum/scss/blocks/_modals.scss
@@ -77,7 +77,7 @@
     display: inline-block;
     width: 2.375rem;
     height: 100%;
-    margin: 0 16px 0 -22px;
+    margin: 0 16px;
     margin-inline-start: -22px;
     line-height: 2.375rem;
     color: hsla(0, 0%, 100%, .9);
