--- a/administrator/templates/atum/scss/blocks/_modals.scss
+++ b/administrator/templates/atum/scss/blocks/_modals.scss
@@ -63,7 +63,7 @@
     width: 2.375rem;
     height: 100%;
     margin-block: 0;
-    margin-inline-start: -22px 16px;
+    margin-inline: -22px 16px;
     line-height: 2.375rem;
     color: hsla(0, 0%, 100%, .9);
     background-color: var(--danger);
@@ -78,7 +78,7 @@
     width: 2.375rem;
     height: 100%;
     margin-block: 0;
-    margin-inline-start: -22px 16px;
+    margin-inline: -22px 16px;
     line-height: 2.375rem;
     color: hsla(0, 0%, 100%, .9);
     background-color: var(--success);
