--- a/administrator/templates/atum/scss/blocks/_modals.scss
+++ b/administrator/templates/atum/scss/blocks/_modals.scss
@@ -62,8 +62,8 @@
     display: inline-block;
     width: 2.375rem;
     height: 100%;
-    margin-block: 0;
-    margin-inline-start: -22px 16px;
+    margin: 0 16px;
+    margin-inline-start: -22px;
     line-height: 2.375rem;
     color: hsla(0, 0%, 100%, .9);
     background-color: var(--danger);
@@ -77,8 +77,8 @@
     display: inline-block;
     width: 2.375rem;
     height: 100%;
-    margin-block: 0;
-    margin-inline-start: -22px 16px;
+    margin: 0 16px;
+    margin-inline-start: -22px;
     line-height: 2.375rem;
     color: hsla(0, 0%, 100%, .9);
     background-color: var(--success);
