--- a/components/com_users/forms/login.xml
+++ b/components/com_users/forms/login.xml
@@ -30,6 +30,7 @@
 			name="secretkey"
 			type="text"
 			label="JGLOBAL_SECRETKEY"
+			autocomplete="one-time-code"
 			class=""
 			filter="int"
 			size="25"
