--- a/administrator/templates/atum/scss/template-rtl.scss
+++ b/administrator/templates/atum/scss/template-rtl.scss
@@ -7,6 +7,10 @@ ul {
   padding-right: 0;
 }
 
+body {
+  text-align: right;
+}
+
 .close {
   float: left;
 
@@ -29,12 +33,6 @@ ul {
   left: auto;
 }
 
-.subhead {
-  .dropdown-toggle.btn-action::after {
-    margin: 0 16px 0 -22px;
-  }
-}
-
 .switcher {
   float: right;
 }
@@ -46,6 +44,50 @@ ul {
   .closed & {
     margin-right: 0;
   }
+}
+
+// Header
+.header {
+  .page-title [class^='icon-'] {
+    margin-right: 0;
+    margin-left: 15px;
+  }
+
+  .logo svg,
+  .logo img {
+    margin-right: .8rem;
+    margin-left: auto;
+  }
+}
+
+.menu-collapse {
+  right: 0;
+  left: auto;
+  margin-right: -7.5px;
+  margin-left: 0;
+}
+
+.menu-toggle-icon::before {
+  content: "\f054";
+
+  .closed & {
+    content: "\f053";
+  }
+}
+
+// Status
+.status {
+  margin-right: 250px;
+  margin-left: 0;
+
+  .closed & {
+    margin-right: 50px;
+    margin-left: 0;
+  }
+}
+
+.sidebar-wrapper[data-hidden='1'] ~ .status {
+  margin-right: 0;
 }
 
 // com_cpanel
@@ -122,6 +164,11 @@ ul {
   float: none;
 }
 
+// Quickicon specific
+.message-alert {
+  text-align: left !important;
+}
+
 // Bootstrap overrides
 .text-left {
   text-align: right !important;
@@ -147,6 +194,23 @@ ul {
   span {
     position: relative;
     left: 6px;
+  }
+}
+
+// Changelog modal override
+.changelog {
+  text-align: right !important;
+
+  &__tag {
+    text-align: left;
+  }
+
+  &__list {
+
+    ul {
+      padding-right: 15px;
+      padding-left: auto;
+    }
   }
 }
 
