[4.0][Atum] Rounded 'input-group-append' (#28645)

--- a/administrator/templates/atum/scss/blocks/_form.scss
+++ b/administrator/templates/atum/scss/blocks/_form.scss
@@ -156,3 +156,17 @@ legend {
   font-size: $label-font-size;
   color: var(--atum-special-color);
 }
+
+.input-group-append {
+  overflow: hidden;
+
+  [dir=ltr] & {
+    border-top-right-radius: $border-radius;
+    border-bottom-right-radius: $border-radius;
+  }
+
+  [dir=rtl] & {
+    border-top-left-radius: $border-radius;
+    border-bottom-left-radius: $border-radius;
+  }
+}
