Use margin-inline-end in atum's _header.scss

--- a/administrator/templates/atum/scss/blocks/_header.scss
+++ b/administrator/templates/atum/scss/blocks/_header.scss
@@ -84,8 +84,9 @@
     text-overflow: ellipsis;
     white-space: nowrap;
 
-    [class^='icon-'] {
-      margin-inline-end: .625rem;
+    [class^='icon-'],
+    [class^='fa-'] {
+      margin-inline-end: 0.625rem;
       font-size: 1rem;
     }
   }
@@ -290,14 +291,6 @@
     .header-item {
       width: 6.6rem;
       height: 3.7rem;
-
-      .header-item-content > :first-child {
-        color: var(--atum-special-color);
-
-        &[aria-expanded=true] {
-          color: var(--atum-text-light);
-        }
-      }
     }
 
     .header-item-content {
@@ -375,6 +368,14 @@
         [dir=rtl] & {
           right: 0;
           left: auto;
+        }
+      }
+
+      & .header-item .header-item-content > :first-child {
+        color: var(--atum-special-color);
+
+        &[aria-expanded=true] {
+          color: var(--atum-text-light);
         }
       }
     }
