Fix CS from last commit in atum's _header.scss

--- a/administrator/templates/atum/scss/blocks/_header.scss
+++ b/administrator/templates/atum/scss/blocks/_header.scss
@@ -86,7 +86,7 @@
 
     [class^='icon-'],
     [class^='fa-'] {
-      margin-inline-end: 0.625rem;
+      margin-inline-end: .625rem;
       font-size: 1rem;
     }
   }
