Improve text padding in quickicons (#28668)

--- a/administrator/templates/atum/scss/blocks/_quickicons.scss
+++ b/administrator/templates/atum/scss/blocks/_quickicons.scss
@@ -166,16 +166,9 @@
       }
     }
 
-    .quickicon-text {
-      min-height: 1.2rem;
-      padding: .2rem;
-      font-size: .875rem;
-      text-align: center;
-    }
-
     .j-links-link {
       display: block;
-      padding: 0 1rem;
+      padding: 0 .2rem;
       line-height: 1.1;
     }
 
