Remove workflow from com_content (#56)
* Remove more conditions
Load transition field if component uses WorkflowModelTrait

* Revert publish method to Joomla! 3 version and add workflow plugin group

* Fix spelling error

* Execute transition if selected in the item
Add before/after item save for workflow

--- a/administrator/components/com_content/forms/article.xml
+++ b/administrator/components/com_content/forms/article.xml
@@ -67,11 +67,18 @@
 		/>
 
 		<field
-			name="transition"
-			type="transition"
-			label="COM_CONTENT_TRANSITION"
-			extension="com_content"
-		/>
+			name="state"
+			type="list"
+			label="JSTATUS"
+			class="custom-select-color-state"
+			size="1"
+			default="1"
+			>
+			<option value="1">JPUBLISHED</option>
+			<option value="0">JUNPUBLISHED</option>
+			<option value="2">JARCHIVED</option>
+			<option value="-2">JTRASHED</option>
+		</field>
 
 		<field
 			name="tags"
