--- a/components/com_content/forms/article.xml
+++ b/components/com_content/forms/article.xml
@@ -55,12 +55,17 @@
 		/>
 
 		<field
-			name="transition"
-			type="transition"
-			extension="com_content"
-			addfieldprefix="Joomla\Component\Workflow\Administrator\Field"
-			label="COM_CONTENT_STATE"
-		>
+			name="state"
+			type="list"
+			label="JSTATUS"
+			class="custom-select-color-state"
+			size="1"
+			default="1"
+			>
+			<option value="1">JPUBLISHED</option>
+			<option value="0">JUNPUBLISHED</option>
+			<option value="2">JARCHIVED</option>
+			<option value="-2">JTRASHED</option>
 		</field>
 
 		<field
