--- a/administrator/templates/atum/scss/blocks/_alerts.scss
+++ b/administrator/templates/atum/scss/blocks/_alerts.scss
@@ -31,6 +31,12 @@
   }
 }
 
+fieldset .alert {
+    &.alert-info {
+      margin: -1rem 0 1rem;
+    }
+}
+
 // Contains joomla-alert webcomponent with its own css
 .notify-alerts {
   position: fixed;
