[4.0][Atum] Rewrite sidebar CSS (#28756)

--- a/administrator/templates/atum/scss/blocks/_login.scss
+++ b/administrator/templates/atum/scss/blocks/_login.scss
@@ -109,12 +109,17 @@
   }
 
   #sidebar-wrapper {
+    display: flex;
+    flex-direction: column;
+    flex: 1 0 33%;
+    max-width: $sidebar-width-login;
 
     @include media-breakpoint-down(sm) {
       order: 2;
     }
 
     #main-brand {
+      margin-bottom: auto;
 
       a {
         font-size: .875rem;
@@ -217,12 +222,13 @@ label {
   }
 }
 
- // Detect IE 10+ and display alert
+// Detect IE 10+ and display alert
 .ie11 {
   display: none;
 }
 
-@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
+@media all and (-ms-high-contrast: none),
+(-ms-high-contrast: active) {
   .ie11 {
     display: block;
   }
