[4.0] Improving Color harmony of the dark colour background in atum (#28780)

--- a/administrator/templates/atum/scss/_variables.scss
+++ b/administrator/templates/atum/scss/_variables.scss
@@ -31,7 +31,7 @@ $green:                            #2f7d32; //used in bootstrap
 $green-dark:                       #0f2f21; //used for alert success
 $teal:                             #20c997; //used in bootstrap
 $cyan:                             #107d8e; //used in bootstrap
-$darkblue:                         #3b4a5c;
+$darkblue:                         #132f53;
 $base-color:                       $darkblue;
 
 $theme-colors: ();
