--- a/administrator/components/com_workflow/forms/filter_transitions.xml
+++ b/administrator/components/com_workflow/forms/filter_transitions.xml
@@ -45,12 +45,11 @@
 			type="list"
 			label="JGLOBAL_SORT_BY"
 			default="t.ordering ASC"
-			statuses="*,0,1,2,-2"
 			onchange="this.form.submit();"
 			>
 			<option value="">JGLOBAL_SORT_BY</option>
-			<option vaule="t.ordering ASC">JGRID_HEADING_ORDERING_ASC</option>
-			<option vaule="t.ordering DESC">JGRID_HEADING_ORDERING_DESC</option>
+			<option value="t.ordering ASC">JGRID_HEADING_ORDERING_ASC</option>
+			<option value="t.ordering DESC">JGRID_HEADING_ORDERING_DESC</option>
 			<option value="t.published ASC">JSTATUS_ASC</option>
 			<option value="t.published DESC">JSTATUS_DESC</option>
 			<option value="t.title ASC">JGLOBAL_NAME_ASC</option>
