--- a/administrator/components/com_workflow/forms/filter_transitions.xml
+++ b/administrator/components/com_workflow/forms/filter_transitions.xml
@@ -46,6 +46,7 @@
 			label="JGLOBAL_SORT_BY"
 			default="t.ordering ASC"
 			onchange="this.form.submit();"
+			validate="options"
 			>
 			<option value="">JGLOBAL_SORT_BY</option>
 			<option value="t.ordering ASC">JGRID_HEADING_ORDERING_ASC</option>
