[4.0] font-weight variables Atum (#28847)
This PR makes sure that the font-weight is always using a variable and not hard coded.

Note sometimes we are using atum variables and sometimes bootstrap variables. Fixing that in Atum is beyond the scope of this PR

--- a/administrator/templates/atum/scss/blocks/_login.scss
+++ b/administrator/templates/atum/scss/blocks/_login.scss
@@ -90,7 +90,7 @@
   h1 {
     padding-bottom: 1rem;
     margin: 0;
-    font-weight: bold;
+    font-weight: $font-weight-bold;
     color: var(--atum-special-color);
     text-align: center;
   }
