--- a/administrator/templates/atum/scss/_variables.scss
+++ b/administrator/templates/atum/scss/_variables.scss
@@ -17,7 +17,7 @@ $black:                            #000;    //used for shadows
 $focuscolor:                       #39f;    //used for focus color
 $dark-blue:                        #001b4c; //is the atum-special-color
 $light-blue:                       #2a69b8; //is the atum-link-color
-$focusshadow:                      0 0 0 .2rem #d3e2f5;
+$focusshadow:                      0 0 0 .2rem #eaeaea;
 
 // BS Colours
 $blue:                             hsl(213, 63, 44%); // base color for calculation, Primary-color
@@ -94,7 +94,7 @@ $alert-color-level:                0;
 // Global
 $atum-box-shadow:                  0 2px 4px rgba(0, 0, 0, .16), 0 2px 4px rgba(0, 0, 0, .23);
 $enable-rounded:                   true;
-$input-box-shadow:                 inset 0 0 0 .1rem lighten(theme-color("atum-link-color"), 45%);
+$input-box-shadow:                 inset 0 0 0 .1rem #e9e9e9;
 $input-btn-padding-y:              .6rem;
 $input-btn-padding-x:              1rem;
 $input-max-width:                  100%;
@@ -231,7 +231,7 @@ $custom-select-multiple-padding-y:   .3rem;
 
 //input
 $input-padding:                    .6rem 1rem;
-$input-border:                     solid 1px  #6d7784;
+$input-border:                     solid 1px  #c9c9c9;
 
 // Modals
 $modal-header-height:              2.875rem;
