--- a/administrator/templates/atum/scss/blocks/_header.scss
+++ b/administrator/templates/atum/scss/blocks/_header.scss
@@ -116,6 +116,11 @@
         color: $white;
       }
 
+      .text-muted {
+        color: #fff !important;
+        opacity: .6;
+      }
+
       a,
       button {
 
@@ -130,11 +135,11 @@
         &.disabled,
         &.disabled:hover,
         &.disabled[aria-expanded="true"] {
-          color: var(--atum-special-color);
+          color: #fff;
           pointer-events: none;
           background-color: transparent;
           box-shadow: none;
-          opacity: .3;
+          opacity: .6;
         }
       }
 
