--- a/administrator/templates/atum/scss/blocks/_login.scss
+++ b/administrator/templates/atum/scss/blocks/_login.scss
@@ -40,6 +40,17 @@
       padding: 15px;
     }
 
+    svg.joomla-logo {
+      background-size: 4.4rem 2.4rem;
+      height: 4.4rem;
+      width: 2.4rem;
+
+      path {
+        fill: var(--atum-bg-dark);
+      }
+
+    }
+
     #form-login {
 
       .form-group {
@@ -58,8 +69,9 @@
     }
 
     #btn-login-submit {
-      color: rgba(255, 255, 255, .8);
-      background: var(--atum-bg-dark);
+      color: var(--atum-text-light);
+      background-color: var(--atum-link-color);
+      border-color: var(--atum-link-color);
     }
   }
 
@@ -90,9 +102,13 @@
   h1 {
     padding-bottom: 1rem;
     margin: 0;
+    color: var(--atum-bg-dark);
     font-weight: $font-weight-bold;
-    color: var(--atum-special-color);
     text-align: center;
+  }
+
+  h2 {
+    color: var(--atum-text-dark);
   }
 
   .btn {
