--- a/administrator/templates/atum/scss/blocks/_quickicons.scss
+++ b/administrator/templates/atum/scss/blocks/_quickicons.scss
@@ -19,7 +19,7 @@
       margin: 0 auto;
       font-size: $quickicon-icon-size;
       color: transparent;
-      background: linear-gradient(var(--atum-link-color), #5693e1);
+      background: linear-gradient(var(--atum-link-color), var(--atum-link-hover-color));
       background-clip: text;
 
       &.big {
