Revert changes on button colors (#28907)
Change Info buttons to use template variables

--- a/administrator/templates/atum/scss/_variables.scss
+++ b/administrator/templates/atum/scss/_variables.scss
@@ -169,8 +169,8 @@ $state-success-bg:                 lighten($green-dark, 70%);
 $state-success-border:             lighten($green-dark, 30%);
 
 $state-info-text:                  var(--white);
-$state-info-bg:                    var(--info);
-$state-info-border:                var(--info-border);
+$state-info-bg:                    var(--atum-bg-dark);
+$state-info-border:                var(--atum-bg-dark);
 
 $state-warning-text:               var(--atum-text-dark);
 $state-warning-bg:                 var(--warning);
