[4.0] th on safari (#28921)
* [4.0] th on safari

PR for #28904

This is a test PR for the TH alignment issue with safari. It is a bug in bootstrap that they have fixed and merged but not released yet. See https://github.com/twbs/bootstrap/pull/30323

This PR adds a _temporary_ reboot.css override with the code direct from bootstrap. I can't see any other way to fix this beta blocker.

I do not have access to Safari to test this.

@nikosdion please can you test this

* Update _reboot.scss

--- a/administrator/templates/atum/scss/template.scss
+++ b/administrator/templates/atum/scss/template.scss
@@ -30,6 +30,7 @@
 @import "vendor/bootstrap/modal";
 @import "vendor/bootstrap/nav";
 @import "vendor/bootstrap/pagination";
+@import "vendor/bootstrap/reboot";
 @import "vendor/bootstrap/table";
 
 // Blocks
