Add featuring plugin (#84)
* Initial support for featuring transition

* Move $supportFunctionality from the trait to the service.

* Disable list item feature button and view restriction

* Comments/cs

--- a/plugins/workflow/publishing/forms/workflow_publishing.xml
+++ b/plugins/workflow/publishing/forms/workflow_publishing.xml
@@ -12,7 +12,7 @@
 				default=""
 				hide_all="true"
 			>
-				<option value="">PLG_WORKFLOW_PUBLISHING_TRANSITION_ACTIONS_PUBLISHING_DO_NO_CHANGE</option>
+				<option value="">JOPTION_DO_NOT_USE</option>
 			</field>
 		</fieldset>
 	</fields>
