--- a/components/com_content/forms/article.xml
+++ b/components/com_content/forms/article.xml
@@ -74,6 +74,7 @@
 			label="JGLOBAL_FIELD_FEATURED_LABEL"
 			id="featured"
 			default="0"
+			validate="options"
 			>
 			<option value="0">JNO</option>
 			<option value="1">JYES</option>
@@ -250,6 +251,7 @@
 				type="list"
 				label="COM_CONTENT_FLOAT_INTRO_LABEL"
 				useglobal="true"
+				validate="options"
 				>
 				<option value="right">COM_CONTENT_RIGHT</option>
 				<option value="left">COM_CONTENT_LEFT</option>
@@ -282,6 +284,7 @@
 				type="list"
 				label="COM_CONTENT_FLOAT_FULLTEXT_LABEL"
 				useglobal="true"
+				validate="options"
 				>
 				<option value="right">COM_CONTENT_RIGHT</option>
 				<option value="left">COM_CONTENT_LEFT</option>
