--- a/components/com_config/forms/modules.xml
+++ b/components/com_config/forms/modules.xml
@@ -52,6 +52,7 @@
 			label="JSTATUS"
 			default="1"
 			size="1"
+			validate="options"
 			>
 			<option value="1">JPUBLISHED</option>
 			<option value="0">JUNPUBLISHED</option>
