[4.0] Replace inline style width 15% with w-15 (#28969)

--- a/administrator/templates/atum/scss/blocks/_utilities.scss
+++ b/administrator/templates/atum/scss/blocks/_utilities.scss
@@ -81,9 +81,13 @@
 // Sizing
 
 .w-5 {
-  width: 5% !important;
+  width: 5%;
 }
 
 .w-10 {
-  width: 10% !important;
+  width: 10%;
+}
+
+.w-15 {
+  width: 15%;
 }
